[package]
name = "near-jsonrpc-adversarial-primitives"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

serde.workspace = true

near-primitives.workspace = true
near-network.workspace = true

[features]
test_features = ["near-network/test_features"]
