[package]
name = "genesis-csv-to-json"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

chrono.workspace = true
clap.workspace = true
csv.workspace = true
serde.workspace = true

nearcore.workspace = true
near-chain-configs.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
near-network.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
serde.workspace = true
