[package]
name = "genesis-populate"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster//blockbuster"}
lazy_static = "1.4"

borsh.workspace = true
clap.workspace = true
indicatif.workspace = true
tempfile.workspace = true

nearcore.workspace = true
near-chain-configs.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
near-store.workspace = true
near-chain.workspace = true
near-test-contracts.workspace = true

[features]
nightly = [
  "nearcore/nightly",
]
