[package]
name = "runtime-tester"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

cpu-time.workspace = true
libfuzzer-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing.workspace = true

near-chain.workspace = true
near-chain-configs.workspace = true
near-crypto.workspace = true
near-client.workspace = true
near-client-primitives.workspace = true
near-epoch-manager.workspace = true
nearcore.workspace = true
near-primitives.workspace = true
near-store.workspace = true
near-o11y.workspace = true
near-test-contracts.workspace = true

[dev-dependencies]
testlib.workspace = true
