[package]
name = "store-validator"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

ansi_term.workspace = true
clap.workspace = true

near-chain-configs.workspace = true
near-primitives.workspace = true
near-store.workspace = true
near-o11y.workspace = true
near-chain.workspace = true
nearcore.workspace = true

[dev-dependencies]
testlib.workspace = true
serde_json.workspace = true
near-client.workspace = true
