[package]
name = "testlib"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

once_cell.workspace = true

near-chain-configs.workspace = true
near-chain.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
near-test-contracts.workspace = true
node-runtime.workspace = true

[features]
default = []
