[package]
name = "near-amend-genesis"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

anyhow.workspace = true
borsh.workspace = true
clap.workspace = true
num-rational.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing.workspace = true

near-chain.workspace = true
near-chain-configs.workspace = true
near-crypto.workspace = true
near-epoch-manager.workspace = true
near-network.workspace = true
near-primitives.workspace = true
near-primitives-core.workspace = true
near-store.workspace = true
near-test-contracts.workspace = true
nearcore.workspace = true
node-runtime.workspace = true
