[package]
name = "chainsync-loadtest"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true
default-run = "chainsync-loadtest"

[[bin]]
path = "src/main.rs"
name = "chainsync-loadtest"

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

actix.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
log.workspace = true
openssl-probe.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true

near-async.workspace = true
near-chain-configs.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
near-store.workspace = true
nearcore.workspace = true
near-network.workspace = true
near-o11y.workspace = true
