[package]
name = "delay-detector"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

tracing.workspace = true
cpu-time.workspace = true

[features]
delay_detector = []
