[package]
name = "near-flat-storage"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

anyhow.workspace = true
borsh.workspace = true
clap.workspace = true
rayon.workspace = true

tqdm.workspace = true

near-chain.workspace = true
near-chain-configs.workspace = true

near-epoch-manager.workspace = true
near-primitives.workspace = true
near-store.workspace = true
nearcore.workspace = true
