[package]
name = "restaked"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

clap.workspace = true
tokio.workspace = true

near-crypto.workspace = true
near-primitives.workspace = true
near-jsonrpc-client.workspace = true
nearcore.workspace = true
near-o11y.workspace = true

integration-tests.workspace = true

[features]
test_features = ["integration-tests/test_features"]
