[package]
name = "near-config-utils"
version = "0.0.0"
license = "MIT OR Apache-2.0"
authors.workspace = true
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version.workspace = true
edition.workspace = true
repository = "https://github.com/near/nearcore"
description = "This is an internal crate to provide utils for reading config files"

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

anyhow.workspace = true
json_comments.workspace = true
thiserror.workspace = true
tracing.workspace = true

