[package]
name = "near-mainnet-res"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

serde_json.workspace = true

near-account-id.workspace = true
near-chain-configs.workspace = true
near-primitives.workspace = true
