[package]
name = "near-cache"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/nearcore"
description = "do not use this, new versions can stop being published at literally any time"

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

lru.workspace = true

[dev-dependencies]
bencher.workspace = true
rand.workspace = true

[[bench]]
name = "cache"
harness = false
