[package]
name = "near-performance-metrics-macros"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true
