[package]
name = "near-performance-metrics"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

actix.workspace = true
bitflags.workspace = true
bytes.workspace = true
bytesize = { workspace = true, optional = true }
futures.workspace = true
libc.workspace = true
once_cell.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[features]
c_memory_stats = []
performance_stats = ["bytesize"]
