[package]
name = "near-jsonrpc-client"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

actix-http.workspace = true
awc.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true

near-jsonrpc-primitives.workspace = true
near-primitives.workspace = true
