[package]
authors.workspace = true
name = "estimator-warehouse"
version = "0.0.0"
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
nix.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
xshell.workspace = true

[dev-dependencies]
insta.workspace = true
