[package]
name = "runtime-tester-fuzz"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

libfuzzer-sys.workspace = true
serde_json.workspace = true
runtime-tester.workspace = true

[[bin]]
name = "runtime_fuzzer"
path = "fuzz_targets_disabled/runtime_fuzzer.rs"
test = false
doc = false
