[package]
name = "indexer-example"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

actix.workspace = true
anyhow.workspace = true
clap.workspace = true
openssl-probe.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

near-indexer.workspace = true
near-o11y.workspace = true
