[package]
name = "near-vm-test-generator"
version = "0.0.0"
edition = "2021"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>", "Near Inc <hello@nearprotocol.com>"]
publish = false
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
blockbuster={path="/Users/dev_june/dev_docs/test-workspace/nearcore-blockbuster/blockbuster"}
lazy_static = "1.4"

anyhow.workspace = true
target-lexicon.workspace = true

[features]
test-dylib = []
test-universal = []
